--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"apisauce": "^1.0.1",
 		"cors": "^2.8.5",
+		"crc": "^3.8.0",
 		"dotenv": "^6.2.0",
 		"express": "^4.16.4",
 		"find-config": "^1.0.0",
@@ -41,5 +42,9 @@
 		"moment": "^2.22.2",
 		"mqtt": "^2.18.8",
 		"senti-apicore": "0.0.17"
+	},
+	"devDependencies": {
+		"babel-preset-env": "^1.7.0",
+		"babel-register": "^6.26.0"
 	}
 }
