--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"helmet": "^3.15.0",
 		"moment": "^2.22.2",
 		"mqtt": "^2.18.8",
+		"mqtt-packet": "^6.1.2",
 		"senti-apicore": "0.0.17"
 	},
 	"devDependencies": {
